# rules_integration_tests

./: .bazelrc  MODULE.bazel  WORKSPACE  go.mod
.devcontainer/: Dockerfile  devcontainer.json
core/go/: BUILD  main.go
core/go/grpc/: BUILD  containers.go  grpc.go
core/proto/: BUILD  containers.proto  main.proto
docs/: design.md
internal/: core.bzl
tools/: gopackagesdriver.sh
