module(
    name = "rules_integration_tests",
    version = "0.0.1",
)

bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "stardoc", version = "0.5.3")
bazel_dep(name = "rules_go", version = "0.38.1")
bazel_dep(name = "bazel_skylib", version = "1.4.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
