module(
    name = "rules_integration_tests",
    version = "0.0.1",
)

bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "stardoc", version = "0.5.3")
bazel_dep(name = "rules_go", version = "0.38.1")
bazel_dep(name = "bazel_skylib", version = "1.4.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "gazelle", version = "0.28.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "org_golang_google_grpc"
)